// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorsFieldSelector /> should display all unique fields from a DataView[] 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayout--group"
      >
        <label
          class="euiFormLabel euiFormControlLayout__prepend"
        >
          Stack by
        </label>
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <select
            class="euiSelect euiFormControlLayout--1icons euiSelect--inGroup"
            data-test-subj="tiIndicatorFieldSelectorDropdown"
          >
            <option
              value="@timestamp"
            >
              @timestamp
            </option>
            <option
              value="threat.feed.name"
            >
              threat.feed.name
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFormControlLayout euiFormControlLayout--group"
    >
      <label
        class="euiFormLabel euiFormControlLayout__prepend"
      >
        Stack by
      </label>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <select
          class="euiSelect euiFormControlLayout--1icons euiSelect--inGroup"
          data-test-subj="tiIndicatorFieldSelectorDropdown"
        >
          <option
            value="@timestamp"
          >
            @timestamp
          </option>
          <option
            value="threat.feed.name"
          >
            threat.feed.name
          </option>
        </select>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<IndicatorsFieldSelector /> should handle empty array of indexPatterns 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayout--group"
      >
        <label
          class="euiFormLabel euiFormControlLayout__prepend"
        >
          Stack by
        </label>
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <select
            class="euiSelect euiFormControlLayout--1icons euiSelect--inGroup"
            data-test-subj="tiIndicatorFieldSelectorDropdown"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFormControlLayout euiFormControlLayout--group"
    >
      <label
        class="euiFormLabel euiFormControlLayout__prepend"
      >
        Stack by
      </label>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <select
          class="euiSelect euiFormControlLayout--1icons euiSelect--inGroup"
          data-test-subj="tiIndicatorFieldSelectorDropdown"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
